# bd_scan_yocto_via_sbom

./: BOMClass.py  ComponentClass.py  ComponentListClass.py  LICENSE  OEClass.py  QuickStart.md  README.md  RecipeClass.py  RecipeListClass.py  SBOMClass.py  VulnListClass.py  bd_yocto_import_sbom.py  config.py  global_values.py  main.py  pyproject.toml  run.py
bd_scan_yocto/: BBClass.py  BOMClass.py  ComponentClass.py  ComponentListClass.py  ConfigClass.py  OEClass.py  RecipeClass.py  RecipeListClass.py  SBOMClass.py  VulnClass.py  VulnListClass.py  main.py
test/data/: image_license.manifest  layers.txt  license.manifest  pn-buildlist  task-depends.dot
yocto_import_sbom/: BBClass.py  BOMClass.py  ComponentClass.py  ComponentListClass.py  ConfigClass.py  OEClass.py  RecipeClass.py  RecipeListClass.py  SBOMClass.py  VulnClass.py  VulnListClass.py  config.py  global_values.py  main.py
