[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bd_yocto_import_sbom"
version = "1.0.1"
authors = [
  { name="Matthew Brady", email="mbrad@synopsys.com" },
]
description = "BD_yocto_import_sbom - BD Script to import a Yocto project to Black Duck by scanning license.manifest and creating an SBOM file"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "blackduck>=1.1.3",
    "requests",
    "semver"
]

[project.urls]
Homepage = "https://github.com/matthewb66/bd_yocto_import_sbom"
Issues = "https://github.com/matthewb66/bd_yocto_import_sbom/issues"

[project.scripts]
bd-yocto-import = "yocto_import_sbom:main.main"