[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bd_scan_yocto_via_sbom"
version = "1.1.4"
authors = [
  { name="Matthew Brady", email="mbrad@blackduck.com" },
]
description = "BD_yocto_import_sbom - BD Script to import a Yocto project to Black Duck SCA by scanning license.manifest and creating an SBOM file"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "blackduck>=1.1.3",
    "bd-kernel-vulns",
    "requests",
    "semver",
    "aiohttp"
]

[project.urls]
Homepage = "https://github.com/blackducksoftware/bd_scan_yocto_via_sbom"
Issues = "https://github.com/blackducksoftware/bd_scan_yocto_via_sbom/issues"

[project.scripts]
bd-scan-yocto-via-sbom = "bd_scan_yocto:main.main"